--- a/src/config/app.json
+++ b/src/config/app.json
@@ -5,5 +5,6 @@
     "author": "Martin Ortiz",
     "description": "gui to visualize data",
     "copy_right": "Starlab Rocket Propulsion Laboratory 2023, by Martin Ortiz",
-    "license": "MIT"
+    "license": "MIT",
+    "icon": "./src/ui/resources/app.ico"
 }
