--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,10 @@ idna==3.4
 iso8601==2.0.0
 isort==5.12.0
 lief==0.13.2
+llvmlite==0.41.0
 mccabe==0.7.0
-numpy==1.26.0
+numba==0.58.0
+numpy==1.25.2
 oauthlib==3.2.2
 platformdirs==3.11.0
 protobuf==4.24.4
@@ -35,6 +37,7 @@ PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.2
 pyqtgraph==0.13.3
 pyserial==3.5
+PySocks==1.7.1
 pywin32==306
 PyYAML==6.0.1
 requests==2.31.0
